Okay, does a text-align fix my problem?

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ ul.posts li {
 img.center {
     height: 100px;
     width: 100px;
-    margin-left: auto;
-    margin-right: auto;
+    text-align:center;
+    display:block;
+    margin:auto;
 }
